// Minimal Cilium Hubble flow API definitions.
// Derived from github.com/cilium/cilium/api/v1/flow and observer
// Only the types needed for the bridge are included.

syntax = "proto3";

package flow;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// --- Flow types ---

enum FlowType {
  UNKNOWN_TYPE = 0;
  L3_L4 = 1;
  L7 = 2;
  SOCK = 3;
}

enum TrafficDirection {
  TRAFFIC_DIRECTION_UNKNOWN = 0;
  INGRESS = 1;
  EGRESS = 2;
}

enum Verdict {
  VERDICT_UNKNOWN = 0;
  FORWARDED = 1;
  DROPPED = 2;
  ERROR = 3;
  AUDIT = 4;
  REDIRECTED = 5;
  TRACED = 6;
  TRANSLATED = 7;
}

enum IPVersion {
  IP_NOT_USED = 0;
  IPv4 = 1;
  IPv6 = 2;
}

message Endpoint {
  uint32 id = 1;
  uint32 identity = 2;
  string namespace = 3;
  repeated string labels = 4;
  string pod_name = 5;
  repeated Workload workloads = 6;
  string cluster_name = 7;
}

message Workload {
  string name = 1;
  string kind = 2;
}

message IP {
  string source = 1;
  string destination = 2;
  IPVersion ip_version = 3;
  bool encrypted = 4;
}

message Ethernet {
  string source = 1;
  string destination = 2;
}

message Layer4 {
  oneof protocol {
    TCP tcp = 1;
    UDP udp = 2;
    ICMPv4 icmpv4 = 3;
    ICMPv6 icmpv6 = 4;
    SCTP sctp = 5;
  }
}

message TCP {
  uint32 source_port = 1;
  uint32 destination_port = 2;
  TCPFlags flags = 3;
}

message UDP {
  uint32 source_port = 1;
  uint32 destination_port = 2;
}

message SCTP {
  uint32 source_port = 1;
  uint32 destination_port = 2;
}

message ICMPv4 {
  uint32 type = 1;
  uint32 code = 2;
}

message ICMPv6 {
  uint32 type = 1;
  uint32 code = 2;
}

message TCPFlags {
  bool FIN = 1;
  bool SYN = 2;
  bool RST = 3;
  bool PSH = 4;
  bool ACK = 5;
  bool URG = 6;
  bool ECE = 7;
  bool CWR = 8;
  bool NS = 9;
}

// Layer 7 information
message Layer7 {
  Layer7FlowType type = 1;
  uint32 latency_ns = 2;
  oneof record {
    DNS dns = 100;
    HTTP http = 101;
    Kafka kafka = 102;
  }
}

enum Layer7FlowType {
  UNKNOWN_L7_TYPE = 0;
  REQUEST = 1;
  RESPONSE = 2;
  SAMPLE = 3;
}

message DNS {
  string query = 1;
  repeated string ips = 2;
  uint32 ttl = 3;
  repeated string cnames = 4;
  string observation_source = 5;
  uint32 rcode = 6;
  repeated string qtypes = 7;
  repeated string rrtypes = 8;
}

message HTTP {
  uint32 code = 1;
  string method = 2;
  string url = 3;
  string protocol = 4;
  repeated HTTPHeader headers = 5;
}

message HTTPHeader {
  string key = 1;
  string value = 2;
}

message Kafka {
  int32 error_code = 1;
  int32 api_version = 2;
  string api_key = 3;
  int32 correlation_id = 4;
  string topic = 5;
}

message EventTypeFilter {
  int32 type = 1;
}

message CiliumEventType {
  int32 type = 1;
  int32 sub_type = 2;
}

enum DropReason {
  DROP_REASON_UNKNOWN = 0;
  INVALID_SOURCE_MAC = 130;
  INVALID_DESTINATION_MAC = 131;
  INVALID_SOURCE_IP = 132;
  POLICY_DENIED = 133;
  INVALID_PACKET_DROPPED = 134;
  CT_TRUNCATED_OR_INVALID_HEADER = 135;
  CT_MISSING_TCP_ACK_FLAG = 136;
  CT_UNKNOWN_L4_PROTOCOL = 137;
  CT_CANNOT_CREATE_ENTRY_FROM_PACKET = 138;
  UNSUPPORTED_L3_PROTOCOL = 139;
  MISSED_TAIL_CALL = 140;
  ERROR_WRITING_TO_PACKET = 141;
}

message Flow {
  google.protobuf.Timestamp time = 1;
  Verdict verdict = 2;
  uint32 drop_reason = 3;

  Ethernet ethernet = 4;
  IP ip = 5;
  Layer4 l4 = 6;

  Endpoint source = 8;
  Endpoint destination = 9;

  FlowType type = 10;

  string node_name = 11;

  repeated string source_names = 13;
  repeated string destination_names = 14;

  Layer7 l7 = 15;

  bool reply = 16;

  CiliumEventType event_type = 19;

  Endpoint source_service = 20;
  Endpoint destination_service = 21;

  TrafficDirection traffic_direction = 22;

  uint32 policy_match_type = 23;

  int32 drop_reason_desc = 24;

  bool is_reply = 25;

  string trace_observation_point = 26;

  repeated string drop_reason_extra = 27;

  string summary = 100000;
}

// --- Observer service ---

message GetFlowsRequest {
  uint32 number = 1;
  bool follow = 7;
  repeated FlowFilter blacklist = 5;
  repeated FlowFilter whitelist = 6;
  google.protobuf.Timestamp since = 8;
  google.protobuf.Timestamp until = 9;
}

message FlowFilter {
  repeated string source_ip = 1;
  repeated string source_pod = 2;
  repeated string source_fqdn = 7;
  repeated string source_label = 10;
  repeated string source_service = 16;
  repeated string destination_ip = 3;
  repeated string destination_pod = 4;
  repeated string destination_fqdn = 8;
  repeated string destination_label = 12;
  repeated string destination_service = 17;
  repeated Verdict verdict = 5;
  repeated EventTypeFilter event_type = 6;
  repeated string http_status_code = 9;
  repeated string protocol = 13;
  repeated string source_port = 14;
  repeated string destination_port = 15;
  repeated string node_name = 18;
  repeated IPVersion ip_version = 20;
  repeated string trace_id = 24;
}

message GetFlowsResponse {
  oneof response_types {
    Flow flow = 1;
  }
  string node_name = 1000;
  google.protobuf.Timestamp time = 1001;
}

service Observer {
  rpc GetFlows(GetFlowsRequest) returns (stream GetFlowsResponse) {}
}
